fix: configurar SecurityConfig correctamente con JWT y permitAll para /api/auth/**